@@ -1,3 +1,7 @@
+2006-08-07 Erik Hjortsberg  <erik@katastrof.nu>
+
+	* ember.in: If an old version already has been installed, move the config files out of the way. 
+	
 2006-08-06 Erik Hjortsberg  <erik@katastrof.nu>
 
 	* src/services/server/ServerService.cpp: Completely disable the OOG functionality since it wasn't used anyway. And more importantly, it triggered an assertion crash in eris when creating a new character. And since (at least 1.3.11) doesn't compile away assertions in release builds this will always trigger for new players.
